runs/runs/github.com/numba/numba-examples/logs/test-notebook-tutorials-nasa_apps_oct_2019-2 - Decorator Family and features.ipynb-2020-07-03T06.20.txt
[I 200703 06:30:36 inrepo:35] Testing notebook tutorials/nasa_apps_oct_2019/2 - Decorator Family and features.ipynb
[I 200703 06:30:38 execute:404] Executing notebook with kernel: python3
Traceback (most recent call last):
  File "/src/inrepo.py", line 76, in <module>
    main()
  File "/src/inrepo.py", line 72, in main
    test_f(opts.test, opts.output_dir)
  File "/src/inrepo.py", line 38, in run_notebook
    exported = executenb(nb, cwd=os.path.dirname(nb_path))
  File "/srv/conda/envs/notebook/lib/python3.8/site-packages/nbconvert/preprocessors/execute.py", line 737, in executenb
    return ep.preprocess(nb, resources, km=km)[0]
  File "/srv/conda/envs/notebook/lib/python3.8/site-packages/nbconvert/preprocessors/execute.py", line 405, in preprocess
    nb, resources = super(ExecutePreprocessor, self).preprocess(nb, resources)
  File "/srv/conda/envs/notebook/lib/python3.8/site-packages/nbconvert/preprocessors/base.py", line 69, in preprocess
    nb.cells[index], resources = self.preprocess_cell(cell, resources, index)
  File "/srv/conda/envs/notebook/lib/python3.8/site-packages/nbconvert/preprocessors/execute.py", line 448, in preprocess_cell
    raise CellExecutionError.from_cell_and_msg(cell, out)
nbconvert.preprocessors.execute.CellExecutionError: An error occurred while executing the following cell:
------------------
# <Add the decorator here>
def my_solver(a, b, c):
    # You write this!

# check it's correct
assert my_solver(3, 10, 3) == -3
------------------

[0;36m  File [0;32m"<ipython-input-6-35fbef4c39e5>"[0;36m, line [0;32m6[0m
[0;31m    assert my_solver(3, 10, 3) == -3[0m
[0m    ^[0m
[0;31mIndentationError[0m[0;31m:[0m expected an indented block

IndentationError: expected an indented block (<ipython-input-6-35fbef4c39e5>, line 6)


Container exited with status: {'Error': None, 'StatusCode': 1}
